// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App/Pages/Collectivite/Perso Referentiel/Thematique Filter CAE Et ECI 1`] = `
<fieldset
  className="fr-fieldset fr-fieldset--inline"
>
  <legend
    className="fr-fieldset__legend font-bold"
  >
    Référentiels à personnaliser
  </legend>
  <div
    className="fr-fieldset__content"
  >
    <div
      className="fr-checkbox-group fr-checkbox-inline"
    >
      <input
        checked={true}
        className="py-0"
        id="cae"
        name="cae"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="fr-label"
        htmlFor="cae"
      >
        Climat Air Énergie
      </label>
    </div>
    <div
      className="fr-checkbox-group fr-checkbox-inline"
    >
      <input
        checked={true}
        className="py-0"
        id="eci"
        name="eci"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="fr-label"
        htmlFor="eci"
      >
        Économie Circulaire
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`Storyshots App/Pages/Collectivite/Perso Referentiel/Thematique Filter CAE Seulement 1`] = `
<fieldset
  className="fr-fieldset fr-fieldset--inline"
>
  <legend
    className="fr-fieldset__legend font-bold"
  >
    Référentiels à personnaliser
  </legend>
  <div
    className="fr-fieldset__content"
  >
    <div
      className="fr-checkbox-group fr-checkbox-inline"
    >
      <input
        checked={true}
        className="py-0"
        id="cae"
        name="cae"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="fr-label"
        htmlFor="cae"
      >
        Climat Air Énergie
      </label>
    </div>
    <div
      className="fr-checkbox-group fr-checkbox-inline"
    >
      <input
        checked={false}
        className="py-0"
        id="eci"
        name="eci"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="fr-label"
        htmlFor="eci"
      >
        Économie Circulaire
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`Storyshots App/Pages/Collectivite/Perso Referentiel/Thematique Filter ECI Seulement 1`] = `
<fieldset
  className="fr-fieldset fr-fieldset--inline"
>
  <legend
    className="fr-fieldset__legend font-bold"
  >
    Référentiels à personnaliser
  </legend>
  <div
    className="fr-fieldset__content"
  >
    <div
      className="fr-checkbox-group fr-checkbox-inline"
    >
      <input
        checked={false}
        className="py-0"
        id="cae"
        name="cae"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="fr-label"
        htmlFor="cae"
      >
        Climat Air Énergie
      </label>
    </div>
    <div
      className="fr-checkbox-group fr-checkbox-inline"
    >
      <input
        checked={true}
        className="py-0"
        id="eci"
        name="eci"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="fr-label"
        htmlFor="eci"
      >
        Économie Circulaire
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`Storyshots App/Pages/Collectivite/Perso Referentiel/Thematique Filter Selection Vide 1`] = `
<fieldset
  className="fr-fieldset fr-fieldset--inline"
>
  <legend
    className="fr-fieldset__legend font-bold"
  >
    Référentiels à personnaliser
  </legend>
  <div
    className="fr-fieldset__content"
  >
    <div
      className="fr-checkbox-group fr-checkbox-inline"
    >
      <input
        checked={false}
        className="py-0"
        id="cae"
        name="cae"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="fr-label"
        htmlFor="cae"
      >
        Climat Air Énergie
      </label>
    </div>
    <div
      className="fr-checkbox-group fr-checkbox-inline"
    >
      <input
        checked={false}
        className="py-0"
        id="eci"
        name="eci"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="fr-label"
        htmlFor="eci"
      >
        Économie Circulaire
      </label>
    </div>
  </div>
</fieldset>
`;
